--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
+    "@rails/ujs": "^7.1.3-4",
     "@rails/webpacker": "5.4.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "core-js": "3",
     "webpack-dev-server": "^3"
   }
 }
